--- a/home.html
+++ b/home.html
@@ -30,7 +30,7 @@
 -->
     <div class="navbar">
         <ul>
-            <li>
+            <li class= "active">
                 <a href="#">
                     <i class='bx bxs-objects-vertical-bottom icon' style='color:#ffffff' ></i>
                     <i class='bx bxs-objects-vertical-bottom activeIcon'></i>
@@ -64,8 +64,11 @@
             </li>
 
             <div class="indicator">
-                
             </div>
+
+            <script src="/script.js">
+
+            </script>
         </ul>
     </div>
 </body>
