html navbar comps

--- a/bottom_navbar.html
+++ b/bottom_navbar.html
@@ -6,12 +6,59 @@
     <link href="navbar.css" rel= "stylesheet">
     <!-- BOXICONS -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-This will load boxicons font into your webpage
 
 
-    <title>Document</title>
+    <title>navbar prueba</title>
 </head>
 <body>
+    <!--============================HEADER ===========================-->
+    <header class="header" id= "header">
+        <nav class="nav container">
+            <a href="#" class="nav__logo"> Jurassic </a>
+                <div class="nav__menu" id= "nav-menu">
+                    <ul class="nav__list">
+                        <li class="nav__item">
+                            <a href="#home" class="nav__link">
+                                <i class='bx bxs-home-alt-2 nav__icon'></i>
+                                <span class="nav__name">Home</span>    
+                            </a>
+                        </li>
+
+                        <li class="nav__item">
+                            <a href="#pre-match" class="nav__link">
+                                <i class='bx bx-info-circle nav__icon' ></i>
+                                <span class="nav__name">Pre-match</span>
+                            </a>
+                        </li>
+
+                        <li class="nav__item">
+                            <a href="#pit" class="nav__link">
+                                <i class='bx bx-bot nav__icon' ></i>
+                                <span class="nav__name">Pit</span>
+                            </a>
+                        </li>
+
+                        <li class="nav__item">
+                            <a href="#match" class="nav__link">
+                                <i class='bx bx-game nav__icon' ></i>
+                                <span class="nav__name">Match</span>
+                            </a>
+                        </li>
+
+                        <li class="nav__item">
+                            <a href="#post-match" class="nav__link">
+                                <i class='bx bxs-ghost' ></i>
+                                <span class="nav__name nav__icon">Post-match</span>
+                            </a>
+                        </li>
+                    </ul>
+
+                    <!--====== IMP LOGO =======-->
+                    <img src="/resources/logos/5887_negro.png" alt="imp-logo" class="nav__img">
+                </div>
+        </nav>
+
+    </header>
     
 </body>
 </html>
