--- a/bottom_navbar.html
+++ b/bottom_navbar.html
@@ -41,24 +41,52 @@
                         <li class="nav__item">
                             <a href="#match" class="nav__link">
                                 <i class='bx bx-game nav__icon' ></i>
-                                <span class="nav__name">Match</span>
+                                <span class="nav__name ">Match</span>
                             </a>
                         </li>
 
                         <li class="nav__item">
                             <a href="#post-match" class="nav__link">
-                                <i class='bx bxs-ghost' ></i>
-                                <span class="nav__name nav__icon">Post-match</span>
+                                <i class='bx bxs-ghost nav__icon' ></i>
+                                <span class="nav__name">Post-match</span>
                             </a>
                         </li>
                     </ul>
 
-                    <!--====== IMP LOGO =======-->
-                    <img src="/resources/logos/5887_negro.png" alt="imp-logo" class="nav__img">
                 </div>
+                 <!--====== IMP LOGO =======-->
+                 <img src="/resources/logos/5887_trans.png" alt="imp-logo" class="nav__img">
         </nav>
 
     </header>
-    
+    <!-- =============================== APP =============================-->
+    <main>
+        <!--================= HOME ====================-->
+        <section class="container section section_height">
+            <h2 class="section__title">Home</h2>
+        </section>
+
+        <!--================= PRE-MATCH ====================-->
+        <section class="container section section_height">
+            <h2 class="section__title">Pre-match</h2>
+        </section>
+
+        <!--================= PIT SCOUT ====================-->
+        <section class="container section section_height">
+            <h2 class="section__title">Pit Scout</h2>
+        </section>
+
+        <!--================= MATCH SCOUT ====================-->
+        <section class="container section section_height">
+            <h2 class="section__title">Match Scout</h2>
+        </section>
+
+        <!--================= POST MATCH ====================-->
+        <section class="container section section_height">
+            <h2 class="section__title">Post-match</h2>
+        </section>
+    </main>
+    <!--========================== MAIN JAVASCRIPT ========================-->
+    <script src= "/main.js"></script>
 </body>
 </html>
