--- a/bottom_navbar.html
+++ b/bottom_navbar.html
@@ -62,27 +62,27 @@
     <!-- =============================== APP =============================-->
     <main>
         <!--================= HOME ====================-->
-        <section class="container section section_height">
+        <section class="container section section__height" id="home">
             <h2 class="section__title">Home</h2>
         </section>
 
         <!--================= PRE-MATCH ====================-->
-        <section class="container section section_height">
+        <section class="container section section__height" id="pre-match">
             <h2 class="section__title">Pre-match</h2>
         </section>
 
         <!--================= PIT SCOUT ====================-->
-        <section class="container section section_height">
+        <section class="container section section__height" id="pit-scout">
             <h2 class="section__title">Pit Scout</h2>
         </section>
 
         <!--================= MATCH SCOUT ====================-->
-        <section class="container section section_height">
+        <section class="container section section__height" id="match-scout">
             <h2 class="section__title">Match Scout</h2>
         </section>
 
         <!--================= POST MATCH ====================-->
-        <section class="container section section_height">
+        <section class="container section section__height" id="post-match">
             <h2 class="section__title">Post-match</h2>
         </section>
     </main>
