small & medium media queries

--- a/bottom_navbar.html
+++ b/bottom_navbar.html
@@ -12,20 +12,20 @@
 </head>
 <body>
     <!--============================HEADER ===========================-->
-    <header class="header" id= "header">
+    <header class="header scroll-header" id= "header">
         <nav class="nav container">
             <a href="#" class="nav__logo"> Jurassic </a>
                 <div class="nav__menu" id= "nav-menu">
                     <ul class="nav__list">
                         <li class="nav__item">
-                            <a href="#home" class="nav__link">
+                            <a href="#home" class="nav__link active-link">
                                 <i class='bx bxs-home-alt-2 nav__icon'></i>
                                 <span class="nav__name">Home</span>    
                             </a>
                         </li>
 
                         <li class="nav__item">
-                            <a href="#pre-match" class="nav__link">
+                            <a href="#pre" class="nav__link">
                                 <i class='bx bx-info-circle nav__icon' ></i>
                                 <span class="nav__name">Pre-match</span>
                             </a>
@@ -46,7 +46,7 @@
                         </li>
 
                         <li class="nav__item">
-                            <a href="#post-match" class="nav__link">
+                            <a href="#post" class="nav__link">
                                 <i class='bx bxs-ghost nav__icon' ></i>
                                 <span class="nav__name">Post-match</span>
                             </a>
@@ -67,22 +67,22 @@
         </section>
 
         <!--================= PRE-MATCH ====================-->
-        <section class="container section section__height" id="pre-match">
+        <section class="container section section__height" id="pre">
             <h2 class="section__title">Pre-match</h2>
         </section>
 
         <!--================= PIT SCOUT ====================-->
-        <section class="container section section__height" id="pit-scout">
+        <section class="container section section__height" id="pit">
             <h2 class="section__title">Pit Scout</h2>
         </section>
 
         <!--================= MATCH SCOUT ====================-->
-        <section class="container section section__height" id="match-scout">
+        <section class="container section section__height" id="match">
             <h2 class="section__title">Match Scout</h2>
         </section>
 
         <!--================= POST MATCH ====================-->
-        <section class="container section section__height" id="post-match">
+        <section class="container section section__height" id="post">
             <h2 class="section__title">Post-match</h2>
         </section>
     </main>
