--- a/bottom_navbar.html
+++ b/bottom_navbar.html
@@ -27,7 +27,7 @@
                         <li class="nav__item">
                             <a href="#pre" class="nav__link">
                                 <i class='bx bx-info-circle nav__icon' ></i>
-                                <span class="nav__name">Pre-match</span>
+                                <span class="nav__name">Pre</span>
                             </a>
                         </li>
 
@@ -48,14 +48,14 @@
                         <li class="nav__item">
                             <a href="#post" class="nav__link">
                                 <i class='bx bxs-ghost nav__icon' ></i>
-                                <span class="nav__name">Post-match</span>
+                                <span class="nav__name">Post</span>
                             </a>
                         </li>
                     </ul>
 
                 </div>
                  <!--====== IMP LOGO =======-->
-                 <img src="/resources/logos/5887_trans.png" alt="imp-logo" class="nav__img">
+                 <img src="/resources/logos/5887_2024H.png" alt="imp-logo" class="nav__img">
         </nav>
 
     </header>
