--- a/pit/pit.html
+++ b/pit/pit.html
@@ -222,6 +222,8 @@
                     </div>          
             </form>            
     </div>
+
+    <script href="/pit/js_pit.js"></script>
                      
                 
 
