javascript finally workin

--- a/navbar/bottom_navbar.html
+++ b/navbar/bottom_navbar.html
@@ -211,6 +211,6 @@
         </section>
     </main>
     <!--========================== MAIN JAVASCRIPT ========================-->
-    <script src= "main.js"></script>
+    <script src= "/navbar/main.js"></script>
 </body>
 </html>
