pit container css

--- a/navbar/bottom_navbar.html
+++ b/navbar/bottom_navbar.html
@@ -86,7 +86,7 @@
                     <div class="pit-container">
 
                         <header>
-                            <h1>Pit Scouting: Auto</h1>
+                            <h1>Auto</h1>
                             <p> Please provide the next info of the team on the autonomous period</p>
 
                         </header>
