--- a/pit/pit-fieldset.html/fieldset.html
+++ b/pit/pit-fieldset.html/fieldset.html
@@ -21,7 +21,7 @@
         </header>
 
         <form action="#">
-            <fieldset>
+            <fieldset style="border: hidden;">
 
                 <div class="team-number">
                     <label for="numero_equipo">Número del Equipo:</label>
@@ -178,13 +178,14 @@
 
                         <div class="buttons">
                             
-                            <button type="button" class="nextBtn" onclick="nextSection(2)">
+                            <button type="button" class="backBtn" onclick="prevSection(1)">
                                 <span class="btnText" onclick="prevSection(1)">Back</span>
                             </button>
                             <button type="button" class="nextBtn" onclick="nextSection(2)">
                                 <span class="btnText">Next</span>
                             </button>
                         </div>
+
                     </div>
                 </div>
             </fieldset>
