jurassic for gh pages

--- a/bottom_navbar.html
+++ b/bottom_navbar.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="navbar.css" rel= "stylesheet">
+    <link href="/navbar.css" rel= "stylesheet">
     <!-- TRYING TO MERGE BOTH PROJECTS -->
     <!--
         <link href="/pit/pit.css" rel="stylesheet">
     -->
-    <link href="/navbar/pit-merge.css" rel="stylesheet">
+    <link href="/pit-merge.css" rel="stylesheet">
     <!-- BOXICONS -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
@@ -309,6 +309,6 @@
         </section>
     </main>
     <!--========================== MAIN JAVASCRIPT ========================-->
-    <script src= "/navbar/main.js"></script>
+    <script src= "/main.js"></script>
 </body>
 </html>
